--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-angular-templates": "~0.5.7",
+    "grunt-aws": "^0.6.2",
     "grunt-cli": "~0.1.13",
     "grunt-concurrent": "~1.0.0",
     "grunt-contrib-clean": "~0.6.0",
